src/include/iecode/ffi.h

// ── Lifecycle ───────────────────────────────────────────────────────

/// Retourne la version d'iecode (string statique, ne pas liberer).
IECODE_EXPORT const char* iecode_version(void);
/// Libere un buffer alloue par iecode.
IECODE_EXPORT void iecode_free(void* ptr);
// ── Opaque handles ──────────────────────────────────────────────────

/// Handle opaque pour un resultat de parsing.
typedef struct iecode_result iecode_result_t;
/// Handle opaque pour un fichier G4TX parse.
typedef struct iecode_g4tx iecode_g4tx_t;
/// Handle opaque pour un CPK ouvert.
typedef struct iecode_cpk iecode_cpk_t;
// ── cfg.bin ─────────────────────────────────────────────────────────

/// Parse un buffer cfg.bin (T2B ou RDBN, detection auto).
/// @param data buffer brut (peut etre chiffre XorShift)
/// @param size taille en octets
/// @return handle vers le resultat, ou NULL en cas d'erreur. Liberer avec iecode_result_free().
IECODE_EXPORT iecode_result_t* iecode_cfgbin_parse(const uint8_t* data, uint32_t size);
/// Retourne le JSON du resultat (string statique liee au handle, ne pas liberer).
IECODE_EXPORT const char* iecode_result_json(const iecode_result_t* result);
/// Retourne le format detecte : "t2b", "rdbn", ou "unknown".
IECODE_EXPORT const char* iecode_result_format(const iecode_result_t* result);
/// Libere un handle de resultat.
IECODE_EXPORT void iecode_result_free(iecode_result_t* result);
// ── G4TX (textures) ─────────────────────────────────────────────────

/// Parse un fichier G4TX.
/// @return handle, ou NULL. Liberer avec iecode_g4tx_free().
IECODE_EXPORT iecode_g4tx_t* iecode_g4tx_parse(const uint8_t* data, uint32_t size);
/// Nombre de textures dans le G4TX.
IECODE_EXPORT int32_t iecode_g4tx_count(const iecode_g4tx_t* g4tx);
/// Exporte la texture d'index `idx` en PNG.
/// @return true si succes.
IECODE_EXPORT int iecode_g4tx_export_png(const iecode_g4tx_t* g4tx, int32_t idx,
                                           const char* output_path);
/// Exporte la texture d'index `idx` en WebP.
IECODE_EXPORT int iecode_g4tx_export_webp(const iecode_g4tx_t* g4tx, int32_t idx,
                                            const char* output_path, int quality);
/// Decode la texture d'index `idx` en RGBA8.
/// @param out_size recoit la taille du buffer retourne
/// @return buffer RGBA8 (width*height*4 octets). Liberer avec iecode_free().
IECODE_EXPORT uint8_t* iecode_g4tx_decode_rgba(const iecode_g4tx_t* g4tx, int32_t idx,
                                                 int32_t* out_width, int32_t* out_height);
/// Info sur une texture (JSON statique lie au handle).
IECODE_EXPORT const char* iecode_g4tx_info(const iecode_g4tx_t* g4tx, int32_t idx);
/// Libere un handle G4TX.
IECODE_EXPORT void iecode_g4tx_free(iecode_g4tx_t* g4tx);
// ── Compression ─────────────────────────────────────────────────────

/// Decompresse LZ10. Retourne la taille decompresee, 0 si erreur.
/// @param out_buf recoit un pointeur vers le buffer alloue. Liberer avec iecode_free().
IECODE_EXPORT uint32_t iecode_lz10_decompress(const uint8_t* data, uint32_t size,
                                                uint8_t** out_buf);
/// Decompresse CRILAYLA. Retourne la taille, 0 si erreur.
IECODE_EXPORT uint32_t iecode_crilayla_decompress(const uint8_t* data, uint32_t size,
                                                    uint8_t** out_buf);
/// Decompresse LZ4 block. Retourne la taille, 0 si erreur.
IECODE_EXPORT uint32_t iecode_lz4_decompress(const uint8_t* data, uint32_t size,
                                               uint32_t decompressed_size,
                                               uint8_t** out_buf);
// ── Crypto ──────────────────────────────────────────────────────────

/// CRC32 d'un buffer.
IECODE_EXPORT uint32_t iecode_crc32(const uint8_t* data, uint32_t size);
/// Dechiffre/chiffre un buffer CRI in-place (XOR symetrique).
IECODE_EXPORT void iecode_cri_decrypt(uint8_t* data, uint32_t size, uint32_t key);
/// Derive la cle CRI depuis un nom de fichier.
IECODE_EXPORT uint32_t iecode_cri_derive_key(const char* filename);
// ── CPK ─────────────────────────────────────────────────────────────

/// Ouvre un fichier CPK depuis un buffer memoire.
/// @return handle, ou NULL. Liberer avec iecode_cpk_free().
IECODE_EXPORT iecode_cpk_t* iecode_cpk_open(const uint8_t* data, uint32_t size);
/// Nombre de fichiers dans le CPK.
IECODE_EXPORT int32_t iecode_cpk_count(const iecode_cpk_t* cpk);
/// Nom du fichier d'index `idx` (string statique liee au handle).
IECODE_EXPORT const char* iecode_cpk_filename(const iecode_cpk_t* cpk, int32_t idx);
/// Extrait un fichier du CPK par index.
/// @param out_size recoit la taille du buffer retourne
/// @return buffer extrait. Liberer avec iecode_free().
IECODE_EXPORT uint8_t* iecode_cpk_extract(const iecode_cpk_t* cpk, int32_t idx,
                                            uint32_t* out_size);
/// Libere un handle CPK.
IECODE_EXPORT void iecode_cpk_free(iecode_cpk_t* cpk);
// ── AWB (AFS2) ─────────────────────────────────────────────────────

/// Handle opaque pour un fichier AWB parse.
typedef struct iecode_awb iecode_awb_t;
/// Parse un fichier AWB depuis un buffer memoire.
/// @return handle, ou NULL. Liberer avec iecode_awb_free().
IECODE_EXPORT iecode_awb_t* iecode_awb_open(const uint8_t* data, uint32_t size);
/// Nombre d'entrees dans le AWB.
IECODE_EXPORT int32_t iecode_awb_count(const iecode_awb_t* awb);
/// Info JSON d'une entree (cue_id, offset, size). String statique liee au handle.
IECODE_EXPORT const char* iecode_awb_entry_info(const iecode_awb_t* awb, int32_t idx);
/// Extrait toutes les pistes vers un repertoire.
/// @return nombre de fichiers extraits.
IECODE_EXPORT int32_t iecode_awb_extract_all(const iecode_awb_t* awb, const char* output_dir);
/// Libere un handle AWB.
IECODE_EXPORT void iecode_awb_free(iecode_awb_t* awb);
// ── ACB ─────────────────────────────────────────────────────────────

/// Info JSON d'un fichier ACB (name, cue_count, has_embedded_awb, cue_names).
/// Le buffer retourne est alloue par iecode. Liberer avec iecode_free().
IECODE_EXPORT const char* iecode_acb_info(const uint8_t* data, uint32_t size);
/// Extrait le AWB embarque d'un ACB.
/// @param out_size recoit la taille du buffer retourne.
/// @return buffer AWB. Liberer avec iecode_free().
IECODE_EXPORT uint8_t* iecode_acb_extract_awb(const uint8_t* data, uint32_t size,
                                                uint32_t* out_size);
// ── USM (video CRI Sofdec2) ────────────────────────────────────────

/// Retourne les metadonnees d'un fichier USM (JSON).
/// Le buffer retourne est alloue par iecode. Liberer avec iecode_free().
IECODE_EXPORT const char* iecode_usm_info(const uint8_t* data, uint32_t size);
/// Demuxe un fichier USM vers un repertoire.
/// @return nombre d'octets ecrits, 0 si erreur.
IECODE_EXPORT uint64_t iecode_usm_demux(const uint8_t* data, uint32_t size,
                                          const char* output_dir);
// ── G4MD (model metadata) ──────────────────────────────────────────

/// Parse un buffer G4MD et retourne les metadonnees en JSON.
/// Le buffer retourne est alloue par iecode. Liberer avec iecode_free().
IECODE_EXPORT const char* iecode_g4md_parse(const uint8_t* data, uint32_t size);
// ── G4CM (character model container) ───────────────────────────────

/// Liste les sous-fichiers d'un conteneur G4CM.
/// Retourne un JSON array [{type, name, offset, size}, ...].
/// Le buffer retourne est alloue par iecode. Liberer avec iecode_free().
IECODE_EXPORT const char* iecode_g4cm_list(const uint8_t* data, uint32_t size);
/// Extrait tous les sous-fichiers d'un G4CM vers un repertoire.
/// @return nombre de fichiers extraits.
IECODE_EXPORT int32_t iecode_g4cm_extract(const uint8_t* data, uint32_t size,
                                           const char* output_dir);
// ── Level-5 Compression (dispatcher unifie) ────────────────────────

/// Decompresse des donnees Level-5 avec dispatch automatique par methode.
/// Retourne la taille decompresee, 0 si erreur.
/// @param out_buf recoit un pointeur vers le buffer alloue. Liberer avec iecode_free().
IECODE_EXPORT uint32_t iecode_level5_decompress(const uint8_t* data, uint32_t size,
                                                 uint8_t** out_buf);
/// Detecte la methode de compression Level-5 depuis le premier octet.
/// @return methode : 0=NONE, 1=LZ10, 2=HUFFMAN4, 3=HUFFMAN8, 4=RLE, 5=ZLIB
IECODE_EXPORT uint8_t iecode_level5_detect_method(const uint8_t* data, uint32_t size);
/// Lit la taille decompressée depuis le header Level-5.
IECODE_EXPORT uint32_t iecode_level5_decompressed_size(const uint8_t* data, uint32_t size);
// ── InazumaLZSS ────────────────────────────────────────────────────

/// Detecte si les donnees utilisent la compression InazumaLZSS (magic "SSZL").
/// @return 1 si oui, 0 sinon.
IECODE_EXPORT int iecode_is_inazuma_lzss(const uint8_t* data, uint32_t size);
/// Decompresse des donnees InazumaLZSS. Retourne la taille, 0 si erreur.
/// @param out_buf recoit un pointeur vers le buffer alloue. Liberer avec iecode_free().
IECODE_EXPORT uint32_t iecode_inazuma_lzss_decompress(const uint8_t* data, uint32_t size,
                                                       uint8_t** out_buf);
// ── Huffman ────────────────────────────────────────────────────────

/// Decompresse des donnees Huffman 4-bit (methode Level-5 #2).
/// @param out_buf recoit un pointeur vers le buffer alloue. Liberer avec iecode_free().
IECODE_EXPORT uint32_t iecode_huffman4_decompress(const uint8_t* data, uint32_t size,
                                                    uint8_t** out_buf);
/// Decompresse des donnees Huffman 8-bit (methode Level-5 #3).
/// @param out_buf recoit un pointeur vers le buffer alloue. Liberer avec iecode_free().
IECODE_EXPORT uint32_t iecode_huffman8_decompress(const uint8_t* data, uint32_t size,
                                                    uint8_t** out_buf);
// ── RLE ────────────────────────────────────────────────────────────

/// Decompresse des donnees RLE (methode Level-5 #4).
/// @param out_buf recoit un pointeur vers le buffer alloue. Liberer avec iecode_free().
IECODE_EXPORT uint32_t iecode_rle_decompress(const uint8_t* data, uint32_t size,
                                               uint8_t** out_buf);
// ── ZLib ───────────────────────────────────────────────────────────

/// Decompresse des donnees ZLib/deflate (methode Level-5 #5).
/// @param out_buf recoit un pointeur vers le buffer alloue. Liberer avec iecode_free().
IECODE_EXPORT uint32_t iecode_zlib_decompress(const uint8_t* data, uint32_t size,
                                                uint8_t** out_buf);
// ── DDS ────────────────────────────────────────────────────────────

/// Detecte si les donnees sont un fichier DDS valide (magic "DDS ").
/// @return 1 si oui, 0 sinon.
IECODE_EXPORT int iecode_dds_is_valid(const uint8_t* data, uint32_t size);
/// Retourne les metadonnees DDS en JSON (width, height, format, mips, etc.).
/// Le buffer retourne est alloue par iecode. Liberer avec iecode_free().
IECODE_EXPORT const char* iecode_dds_info(const uint8_t* data, uint32_t size);
// ── cfg.bin RDBN write ─────────────────────────────────────────────

/// Serialise un CfgBinFile en binaire (format original Level-5).
/// @param result handle obtenu via iecode_cfgbin_parse()
/// @param out_buf recoit un pointeur vers le buffer alloue. Liberer avec iecode_free().
/// @return taille du buffer, 0 si erreur.
IECODE_EXPORT uint32_t iecode_cfgbin_write(const iecode_result_t* result, uint8_t** out_buf);
// ── G4PK ───────────────────────────────────────────────────────────

/// Handle opaque pour un G4PK parse.
typedef struct iecode_g4pk iecode_g4pk_t;
/// Parse un fichier G4PK depuis un buffer memoire.
/// @return handle, ou NULL. Liberer avec iecode_g4pk_free().
IECODE_EXPORT iecode_g4pk_t* iecode_g4pk_open(const uint8_t* data, uint32_t size);
/// Nombre de fichiers dans le G4PK.
IECODE_EXPORT int32_t iecode_g4pk_count(const iecode_g4pk_t* g4pk);
/// Nom du fichier d'index `idx` (string statique liee au handle).
IECODE_EXPORT const char* iecode_g4pk_entry_name(const iecode_g4pk_t* g4pk, int32_t idx);
/// Extrait un fichier du G4PK par index.
/// @param out_size recoit la taille du buffer retourne
/// @return buffer extrait. Liberer avec iecode_free().
IECODE_EXPORT uint8_t* iecode_g4pk_extract(const iecode_g4pk_t* g4pk, int32_t idx,
                                            uint32_t* out_size);
/// Libere un handle G4PK.
IECODE_EXPORT void iecode_g4pk_free(iecode_g4pk_t* g4pk);